Add environment variables example file

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-# Environment file for production deployment
-# Copy this to .env.local and update with your actual values
+# Database Configuration
+DATABASE_URL="mysql://username:password@host:port/database"
 
-# Database - Update with your shared hosting MySQL credentials
-DATABASE_URL="mysql://username:password@host:3306/database_name"
+# Authentication Secret (generate a random string)
+JWT_SECRET="your-super-secret-jwt-key-here"
 
-# JWT Secret - Use a strong secret for production
-JWT_SECRET="your-super-secure-production-jwt-secret"
-
-# Environment
+# Application Environment
 NODE_ENV="production"
+
+# Application URL (will be provided by Vercel)
+NEXTAUTH_URL="https://your-app-name.vercel.app"
