--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ pids
 .env.development.local
 .env.test.local
 .env.production.local
+.env.docker
 
 # Logs
 npm-debug.log*
@@ -36,3 +37,8 @@ Thumbs.db
 
 # Prisma
 prisma/migrations/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+*.log
