--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MYSQL_USER: ${MYSQL_USER:-fashionuser}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:-fashionpass2024}
     ports:
-      - "3306:3306"
+      - "${DB_PORT:-3306}:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
@@ -31,7 +31,7 @@ services:
     container_name: fashion-cms-app
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "${APP_PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
       - DATABASE_URL=mysql://${MYSQL_USER:-fashionuser}:${MYSQL_PASSWORD:-fashionpass2024}@mysql:3306/${MYSQL_DATABASE:-fashion_cms}
@@ -57,7 +57,7 @@ services:
     container_name: fashion-cms-phpmyadmin
     restart: unless-stopped
     ports:
-      - "8080:80"
+      - "${PHPMYADMIN_PORT:-8080}:80"
     environment:
       PMA_HOST: mysql
       PMA_PORT: 3306
