Add comprehensive Docker deployment support
- Add multi-container Docker setup with Next.js app, MySQL database, and phpMyAdmin
- Implement flexible port configuration with multiple methods (environment variables, interactive scripts, Docker Compose override)
- Add Docker Compose v1/v2 compatibility with automatic command detection
- Create deployment scripts for Linux/macOS (deploy-docker.sh) and Windows (deploy-docker.bat)
- Add port configuration helpers (configure-ports.sh/bat) with conflict detection
- Implement robust Dockerfile with standard Next.js build process
- Add health check endpoint at /api/health for container monitoring
- Include comprehensive documentation and deployment guides
- Support environment-specific configuration with .env.docker template
- Add database initialization and Prisma integration for Docker
- Resolve standalone build issues by using regular Next.js build approach
- Remove obsolete docker-compose version warnings
- Enable co-location of app and database to eliminate network latency

--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "DOCKER_BUILD=true prisma generate && next build",
-    "build:docker": "DOCKER_BUILD=true prisma generate && next build",
+    "build": "prisma generate && next build",
+    "build:docker": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
-    "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:build": "docker compose build",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f"
   },
   "dependencies": {
     "next": "^15.5.2",
