--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
   # Optional: PhpMyAdmin for database management
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
+    platform: linux/arm64/v8  # Specify ARM64 platform
     container_name: fashion-cms-phpmyadmin
     restart: unless-stopped
     ports:
